# MMY-TaskTime

./: .gitignore  README.md  app.js  build-mac.sh  build-portable-mac.sh  build-portable-win.bat  build-win.bat  index.html  mini-preview.html  package.json  start.bat  style.css  快速开始.md  打包说明.md
archive/v2.0-multitask/: app.js  index.html  mini-preview.html  style.css
scripts/: prepare-dist.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
开发文档/: 产品需求文档.md  开发计划.md  桌面端MVP需求.md  桌面端问题复盘.md  验证清单.md
